<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_label"
        android:textSize="24sp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/answerBtn1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/answer_btn"
        android:layout_marginTop="40dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"/>

    <Button
        android:id="@+id/answerBtn2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"/>

    <Button
        android:id="@+id/answerBtn3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"/>

    <Button
        android:id="@+id/answerBtn4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="選択肢"
        android:layout_marginTop="6dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="checkAnswer"/>

    <TextView
        android:id="@+id/prevLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_label"
        android:textSize="22sp"
        android:layout_marginTop="20dp"  />

    <TextView
        android:id="@+id/prevLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_label2"
        android:textSize="22sp"
        android:layout_marginTop="20dp"  />

</LinearLayout>
